K3s_deployment_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fyp-deployment
  labels:
    app: fyp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fyp
  template:
    metadata:
      labels:
        app: fyp
    spec:
      containers:
      - name: frontend
        image: lukeconnolly2/fyp-frontend:latest
        ports:
        - containerPort: 3000

      - name: orchestrator
        image: lukeconnolly2/fyp-orchestrator:latest
        ports:
        - containerPort: 8080

      - name: mock-ml
        image: lukeconnolly2/fyp-mock-ml:latest

      - name: db
        image: mongo
        ports:
          - containerPort: 27017
