K3s_deployment_files/frontend-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lukeconnolly2/fyp-frontend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP # Changed from NodePort to ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
