K3s_deployment_files/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
