K3s_deployment_files/orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchastrator
spec:
  selector:
    matchLabels:
      app: orchastrator
  template:
    metadata:
      labels:
        app: orchastrator
    spec:
      containers:
        - name: orchastrator
          image: lukeconnolly2/fyp-orchestrator:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orchastrator
spec:
  type: ClusterIP
  selector:
    app: orchastrator
  ports:
    - port: 8080
      targetPort: 8080
